Update product prices, images, and add tincture products

--- a/tienda.html
+++ b/tienda.html
@@ -412,7 +412,7 @@
                                 title="Magnesio de alta absorción para el sistema nervioso, muscular y descanso.">
                                 Magnesio de alta absorción para el sistema nervioso, muscular y descanso.</p>
                             <div class="mt-auto flex items-center justify-between pt-2">
-                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 80</span>
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 40</span>
                                 <button
                                     class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
                                     <span class="material-symbols-outlined">add_shopping_cart</span>
@@ -1918,6 +1918,203 @@
 
 
 
+
+
+                    <!-- Producto: Tintura Mucuna -->
+                    <div data-category="Sistema Nervioso"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-mucuna.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Mucuna</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Apoyo natural para el sistema nervioso y el estado de ánimo (30ML).">
+                                Apoyo natural para el sistema nervioso y el estado de ánimo (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Tintura Artemisa -->
+                    <div data-category="Sistema Inmune"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-artemisa.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Artemisa</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Propiedades antiparasitarias y apoyo al sistema inmunológico (30ML).">
+                                Propiedades antiparasitarias y apoyo al sistema inmunológico (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Tintura Veronica -->
+                    <div data-category="Sistema Digestivo"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-veronica.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Veronica</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Ayuda a la digestión y salud respiratoria (30ML).">
+                                Ayuda a la digestión y salud respiratoria (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 25</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Tintura Astrágalo -->
+                    <div data-category="Sistema Inmune"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-astragalo.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Astrágalo</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Fortalece las defensas y aumenta la vitalidad (30ML).">
+                                Fortalece las defensas y aumenta la vitalidad (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Tintura Kalanchoe -->
+                    <div data-category="Sistema Inmune"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-kalanchoe.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Kalanchoe</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Propiedades antiinflamatorias y regenerativas (30ML).">
+                                Propiedades antiinflamatorias y regenerativas (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Tintura Pau D'Arco -->
+                    <div data-category="Sistema Inmune"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-pau-d-arco.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Pau D'Arco</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Combate hongos y fortalece el sistema inmune (30ML).">
+                                Combate hongos y fortalece el sistema inmune (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Tintura Cardo Mariano -->
+                    <div data-category="Sistema Digestivo"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("tintura-cardo-mariano.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Tintura Cardo Mariano</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Protector hepático y desintoxicante natural (30ML).">
+                                Protector hepático y desintoxicante natural (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
