Add Tinturas category and Trementina product

--- a/tienda.html
+++ b/tienda.html
@@ -75,6 +75,8 @@
                                 <button onclick="filterByCategory('Sistema Próstata')"
                                     class="text-left px-4 py-2.5 rounded-xl text-xs font-semibold hover:bg-[#27724e]/5 transition-colors uppercase tracking-wider">Sistema
                                     Próstata</button>
+                                <button onclick="filterByCategory('Tinturas')"
+                                    class="text-left px-4 py-2.5 rounded-xl text-xs font-semibold hover:bg-[#27724e]/5 transition-colors uppercase tracking-wider">Tinturas</button>
                                 <button onclick="filterByCategory('Circulación - Metabólico - Energía')"
                                     class="text-left px-4 py-2.5 rounded-xl text-xs font-semibold hover:bg-[#27724e]/5 transition-colors uppercase tracking-wider">Energía
                                     y Metabolismo</button>
@@ -138,6 +140,8 @@
                     <button onclick="filterByCategory('Sistema Hormonal')"
                         class="text-xs font-bold uppercase tracking-widest text-[#27724e]/60 hover:text-[#27724e]">Sistema
                         Hormonal</button>
+                    <button onclick="filterByCategory('Tinturas')"
+                        class="text-xs font-bold uppercase tracking-widest text-[#27724e]/60 hover:text-[#27724e]">Tinturas</button>
                 </div>
                 <a class="text-2xl font-serif font-bold text-[#27724e] hover:text-[#C5A059] transition-colors"
                     href="./nosotros.html">Nosotros</a>
@@ -184,6 +188,10 @@
                     <button
                         class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-xl bg-[#27724e]/5 hover:bg-[#27724e]/10 border border-[#27724e]/5 px-5 transition-all text-[#27724e]">
                         <p class="text-sm font-bold whitespace-nowrap">Sistema Próstata</p>
+                    </button>
+                    <button
+                        class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-xl bg-[#27724e]/5 hover:bg-[#27724e]/10 border border-[#27724e]/5 px-5 transition-all text-[#27724e]">
+                        <p class="text-sm font-bold whitespace-nowrap">Tinturas</p>
                     </button>
                     <button
                         class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-xl bg-[#27724e]/5 hover:bg-[#27724e]/10 border border-[#27724e]/5 px-5 transition-all text-[#27724e]">
@@ -1921,7 +1929,7 @@
 
 
                     <!-- Producto: Tintura Mucuna -->
-                    <div data-category="Sistema Nervioso"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -1949,7 +1957,7 @@
                     </div>
 
                     <!-- Producto: Tintura Artemisa -->
-                    <div data-category="Sistema Inmune"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -1977,7 +1985,7 @@
                     </div>
 
                     <!-- Producto: Tintura Veronica -->
-                    <div data-category="Sistema Digestivo"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -2005,7 +2013,7 @@
                     </div>
 
                     <!-- Producto: Tintura Astrágalo -->
-                    <div data-category="Sistema Inmune"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -2033,7 +2041,7 @@
                     </div>
 
                     <!-- Producto: Tintura Kalanchoe -->
-                    <div data-category="Sistema Inmune"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -2061,7 +2069,7 @@
                     </div>
 
                     <!-- Producto: Tintura Pau D'Arco -->
-                    <div data-category="Sistema Inmune"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -2089,7 +2097,7 @@
                     </div>
 
                     <!-- Producto: Tintura Cardo Mariano -->
-                    <div data-category="Sistema Digestivo"
+                    <div data-category="Tinturas"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
@@ -2106,6 +2114,34 @@
                             <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
                                 title="Protector hepático y desintoxicante natural (30ML).">
                                 Protector hepático y desintoxicante natural (30ML).</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Trementina -->
+                    <div data-category="Tinturas"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("trementina.png");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Trementina</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
+                                title="Potente antiparasitario y depurativo natural.">
+                                Potente antiparasitario y depurativo natural.</p>
                             <div class="mt-auto flex items-center justify-between pt-2">
                                 <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
                                 <button
