Fix product counter showing 58 and update footer links

--- a/tienda.html
+++ b/tienda.html
@@ -218,8 +218,8 @@
                         Nuestra Colección Botánica
                     </h1>
                 </div>
-                <p class="text-[#27724e]/70 mt-4 md:mt-0 max-w-md text-sm md:text-right">
-                    Mostrando 58 de 58 resultados
+                <p id="results-count" class="text-[#27724e]/70 mt-4 md:mt-0 max-w-md text-sm md:text-right">
+                    Calculando resultados...
                 </p>
             </div>
 
@@ -4108,9 +4108,8 @@
                             Hormonal</a>
                         <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Sistema
                             Próstata</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Energía
-                            y
-                            Metabolismo</a>
+                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                            href="#">Tinturas</a>
                     </nav>
                 </div>
                 <div class="flex flex-col gap-6">
@@ -4120,10 +4119,7 @@
                             href="./nosotros.html">La Historia</a>
                         <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
                             href="./nosotros.html">Ética de Origen</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
-                            href="./nosotros.html">Sostenibilidad</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
-                            href="./contacto.html">Venta al por mayor</a>
+
                     </nav>
                 </div>
                 <div class="flex flex-col gap-6">
