--- a/tienda.html
+++ b/tienda.html
@@ -4709,8 +4709,11 @@
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
                                 Renova</h3>
                             <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
-                                title="Fórmula regeneradora y revitalizante.">
-                                Fórmula regeneradora y revitalizante.</p>
+                                title="Fórmula premium con 11.4g de colágeno doblemente hidrolizado y biopéptidos activos de alta absorción. Enriquecido con Resveratrol, Coenzima Q10 y Biotina para una piel radiante, cabello fuerte y energía renovada. ¡Sin azúcar, sin grasas y con un delicioso sabor a berries!">
+                                Fórmula premium con 11.4g de colágeno doblemente hidrolizado y biopéptidos activos de
+                                alta absorción. Enriquecido con Resveratrol, Coenzima Q10 y Biotina para una piel
+                                radiante, cabello fuerte y energía renovada. ¡Sin azúcar, sin grasas y con un delicioso
+                                sabor a berries!</p>
                             <div class="mt-auto flex items-center justify-between pt-2">
                                 <span class="font-serif font-black text-xl text-[#27724e]">S/. 150</span>
                                 <button
@@ -4950,7 +4953,7 @@
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
-                                style='background-image: url("aceite-de-ricino.png");'></div>
+                                style='background-image: url("aceite-de-ricino.jpeg");'></div>
                             <button
                                 class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
                                 <span class="material-symbols-outlined text-sm">favorite</span>
