--- a/tienda.html
+++ b/tienda.html
@@ -2352,7 +2352,7 @@
                         <div class="flex flex-col flex-1 gap-1">
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
-                                Mascarilla de Carbón</h3>
+                                Mascarilla de Carbon</h3>
                             <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
                                 title="Limpieza profunda para la piel y eliminación de toxinas.">
                                 Limpieza profunda para la piel y eliminación de toxinas.</p>
@@ -3305,7 +3305,7 @@
                         <div class="flex flex-col flex-1 gap-1">
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
-                                Óvulo de Ozono</h3>
+                                Ovulo de Ozono</h3>
                             <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
                                 title="Tratamiento avanzado con ozono para la salud íntima.">
                                 Tratamiento avanzado con ozono para la salud íntima.</p>
@@ -3727,7 +3727,7 @@
                         <div class="flex flex-col flex-1 gap-1">
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
-                                Óvulos Hidratantes</h3>
+                                Ovulo de acido hialuronico</h3>
                             <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-2"
                                 title="Hidratación profunda para la salud femenina.">
                                 Hidratación profunda para la salud femenina.</p>
